--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!<!DOCTYPE html>
-<<!DOCTYPE html>
+<!DOCTYPE html>
+
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -11,8 +11,9 @@
     <script>
       alert("two brown fox jumps over the lazy dog")
       </script>
-      <script type="javascript1.js">
-
+      <script src="javascript1.js">  </script>
+      <script>
+          alert(" After I am the alert from the inline javascript in body section");
       </script>
 
   </body>
